WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147456
LayoutTests/inspector frequently run slow and timeout when run in WebKit2 but not WebKit1
https://bugs.webkit.org/show_bug.cgi?id=147456
Summary
LayoutTests/inspector frequently run slow and timeout when run in WebKit2 but...
Joseph Pecoraro
Reported
2015-07-30 14:50:58 PDT
* SUMMARY LayoutTests/inspector frequently run slow and timeout when run in WebKit2 but not WebKit1. I suppose I could have used one of the existing bugs covering slow / flakey tests, but I started tackling this just as a generic issue. * NOTES It appears as though when running under WK2 the Inspector Process ends up throttling DOM Timers. So setTimeout(0) ends up taking ~1 second, leading to significantly slower tests.
Attachments
[PATCH] Proposed Fix
(5.47 KB, patch)
2015-07-30 16:05 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-07-30 14:51:41 PDT
<
rdar://problem/22039803
>
Joseph Pecoraro
Comment 2
2015-07-30 16:05:24 PDT
Created
attachment 257864
[details]
[PATCH] Proposed Fix This should address current unskipped flakey tests and make them run aster. I'll have a separate change that rebases / unskips / unslows tests.
WebKit Commit Bot
Comment 3
2015-07-30 17:17:35 PDT
Comment on
attachment 257864
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 257864 Committed
r187627
: <
http://trac.webkit.org/changeset/187627
>
WebKit Commit Bot
Comment 4
2015-07-30 17:17:44 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5
2015-07-30 17:53:35 PDT
Comment on
attachment 257864
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=257864&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKPreferences.mm:265 > +- (void)_setHiddenPageDOMTimerThrottlingEnabled:(BOOL)hiddenPageDOMTimerRhrottlingEnabled
Rhottling!
Joseph Pecoraro
Comment 6
2015-07-31 14:11:22 PDT
(In reply to
comment #5
)
> Comment on
attachment 257864
[details]
> [PATCH] Proposed Fix > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=257864&action=review
> > > Source/WebKit2/UIProcess/API/Cocoa/WKPreferences.mm:265 > > +- (void)_setHiddenPageDOMTimerThrottlingEnabled:(BOOL)hiddenPageDOMTimerRhrottlingEnabled > > Rhottling!
Oops! I'll quick fix.
Joseph Pecoraro
Comment 7
2015-07-31 14:26:48 PDT
https://trac.webkit.org/r187682
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug